--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
-    <head>
-
-    </head>
+</html>
     <body>
-        
+        <form>
+            <input type="text" id="customerId" name="printRequest"/>
+            <input type="submit" value="Submit">
+        </form>
     </body>
 </html>
